--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "herour-client",
+    "name": "mern-stack-boilerplate-client",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -37,6 +37,5 @@
         "webpack-dev-server": "^3.1.9"
     },
     "keywords": [],
-    "author": "",
-    "license": "ISC"
+    "author": "Meghdad Hadidi"
 }
