--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,11 @@
         "mini-css-extract-plugin": "^0.4.4",
         "node-sass": "^4.9.4",
         "postcss-loader": "^3.0.0",
+        "precss": "^3.1.2",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
+        "stylelint": "^9.6.0",
+        "stylelint-webpack-plugin": "^0.10.5",
         "webpack": "^4.21.0",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.9"
