--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
         "node-sass": "^4.9.4",
         "postcss-loader": "^3.0.0",
         "precss": "^3.1.2",
+        "react-hot-loader": "^4.3.11",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "stylelint": "^9.6.0",
