--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
         "precss": "^3.1.2",
         "react-hot-loader": "^4.3.11",
         "sass-loader": "^7.1.0",
+        "server": "^1.0.18",
         "style-loader": "^0.23.1",
         "stylelint": "^9.6.0",
         "stylelint-webpack-plugin": "^0.10.5",
