--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "main": "server.js",
     "scripts": {
         "babel-node": "babel-node ./server.js",
-        "start": "npm run server",
-        "server": "nodemon --exec \"npm run babel-node\"",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "concurrently \"npm run server\" \"cd client && npm start\"",
+        "server": "nodemon --exec \"npm run babel-node\""
     },
     "repository": {
         "type": "git",
