--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --config ./config/webpack.config.js --mode development --open --hotOnly",
-        "build": "rimraf dist && webpack --config ./config/webpack.config.js --mode production"
+        "set_env_dev": "SET \"NODE_ENV=dev\"",
+        "set_env_prod": "SET \"NODE_ENV=production\"",
+        "start": "SET \"NODE_ENV=development\" && webpack-dev-server --config ./config/webpack.config.js --open --hotOnly",
+        "build": "rimraf dist && SET \"NODE_ENV=production\" && webpack --config ./config/webpack.config.js"
     },
     "dependencies": {
         "react": "^16.5.2",
@@ -14,7 +16,8 @@
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^4.0.8",
         "redux": "^4.0.1",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "uglifyjs-webpack-plugin": "^2.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.1.2",
