--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "set_env_dev": "SET \"NODE_ENV=dev\"",
         "set_env_prod": "SET \"NODE_ENV=production\"",
-        "start": "SET \"NODE_ENV=development\" && webpack-dev-server --config ./config/webpack.config.js --open --hotOnly",
-        "build": "rimraf dist && SET \"NODE_ENV=production\" && webpack --config ./config/webpack.config.js"
+        "start": "SET \"NODE_ENV=development\" && webpack-dev-server --config ./config/webpack.config.js --mode=development --open --hotOnly",
+        "build": "rimraf dist && SET \"NODE_ENV=production\" && webpack --mode=production --config ./config/webpack.config.js"
     },
     "dependencies": {
         "react": "^16.5.2",
@@ -33,6 +33,7 @@
         "mini-css-extract-plugin": "^0.4.4",
         "node-sass": "^4.9.4",
         "postcss-loader": "^3.0.0",
+        "postcss-rtl": "^1.3.2",
         "precss": "^3.1.2",
         "react-hot-loader": "^4.3.11",
         "sass-loader": "^7.1.0",
