--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,15 @@
         "react-dom": "^16.5.2",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
-        "react-router-redux": "^4.0.8",
         "redux": "^4.0.1",
-        "redux-thunk": "^2.3.0",
-        "uglifyjs-webpack-plugin": "^2.0.1"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.1.5",
         "@babel/core": "^7.1.2",
         "@babel/preset-env": "^7.1.0",
         "@babel/preset-react": "^7.0.0",
         "autoprefixer": "^9.2.1",
-        "babel-cli": "^6.26.0",
         "babel-loader": "^8.0.4",
         "babel-preset-react": "^6.24.1",
         "css-loader": "^1.0.0",
@@ -36,11 +34,16 @@
         "postcss-rtl": "^1.3.2",
         "precss": "^3.1.2",
         "react-hot-loader": "^4.3.11",
+        "redux-devtools": "^3.4.1",
+        "redux-devtools-diff-monitor": "^5.0.5",
+        "redux-devtools-dock-monitor": "^1.1.3",
+        "redux-devtools-log-monitor": "^1.4.0",
         "sass-loader": "^7.1.0",
         "server": "^1.0.18",
         "style-loader": "^0.23.1",
         "stylelint": "^9.6.0",
         "stylelint-webpack-plugin": "^0.10.5",
+        "uglifyjs-webpack-plugin": "^2.0.1",
         "webpack": "^4.21.0",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.9"
