--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "chalk": "^2.4.1",
         "concurrently": "^4.0.1",
         "express": "^4.16.4",
-        "mongoose": "^5.3.6"
+        "mongoose": "^5.3.6",
+        "prop-types": "^15.6.2"
     }
 }
